# openoc

./: CITATION.cff  README.rst  pyproject.toml
openoc/: __init__.py  discretization.py  fastfunc.py  optimizer.py  phase.py  system.py  variable.py
tests/: context.py  test_discretization.py  test_fastfunc.py  test_phase.py  test_system_basic.py  test_system_derivative.py  test_variable.py
